# grace-sass

./: .gitattributes  .gitignore  CHANGELOG.md  Makefile  README.md  pyproject.toml  sass.geojson
.github/workflows/: ci.yml  refresh-dashboard.yml
data/: gldas_mm.parquet  sass.geojson  sass_series.parquet  twsa_cm.parquet
docs/: index.html
notebooks/: 01_explore_aoi.py  02_resolve_grace_url.py  03_plot_twsa.py  04_test_gldas_opendap.py  05_compare_twsa_gwsa.py  06_preprocessed_gwsa.py  07_trend_analysis.py  08_anomaly_indicators.py  09_stl_acf_pacf.py  10_prophet_cv.py  11_sarima_ets_comparison.py  12_scenarios.py  13_test_timeseries.py  README.md  preprocessed_gwsa.html
pipeline/: __init__.py  build_dashboard.py  config.py  decomposition.py  forecast.py  indicators.py  ingest_gldas.py  ingest_grace.py  preprocessing.py  proxy.py  scenarios.py  trend.py
tests/: conftest.py  test_decomposition.py  test_forecast.py  test_indicators.py  test_ingest.py  test_preprocessing.py  test_proxy.py  test_scenarios.py  test_translations.py  test_trend.py
ui_strings/: en.json  fr.json
